# googletest-example

./: CMakeLists.txt  README.md
tests/: CMakeLists.txt  tests.cpp
